change course number

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 <!-- Phillip Griffiths Research Assistant Professor in Mathematics-->
 <p>Teaching:</p>
 <ul>
-<li>Fall 2022: 621 Probability Theory I.</li>
-<li>Spring 2022: Math 340 (Advanced Introduction to Probability).</li>
+<li>Fall 2022 (JHU): EN.553.720 Probability Theory I.</li>
+<li>Spring 2022 (Duke): Math 340 (Advanced Introduction to Probability).</li>
 <li>Spring 2021: Math 230 (Probability).</li>
 <li>Spring 2020: <a href="https://services.math.duke.edu/~holee/math361-2020/index.html">Math 361S (Numerical Analysis)</a> <!--Here are links to [ML theory at Princeton](http://mltheory.cs.princeton.edu/) and
 [Sanjeev Arora's research group](http://unsupervised.cs.princeton.edu/).--></li>
