--- a/Research.html
+++ b/Research.html
@@ -151,11 +151,11 @@ Holden Lee, Chirag Pabbaraju, Anish Sevekari, Andrej Risteski
 <h3 id="generative-modeling-learning-probability-distributions">Generative modeling, learning probability distributions</h3>
 <ul>
 <li><p><strong>Provable benefits of score matching</strong></p>
-<p>Chirag Pabbaraju, Dhruv Rohatgi, Anish Prasad Sevekari, Holden Lee, Ankur Moitra, Andrej Risteski.</p>
+<p>Chirag Pabbaraju, Dhruv Rohatgi, Anish Prasad Sevekari, <strong>Holden Lee</strong>, Ankur Moitra, Andrej Risteski.</p>
 <p><a href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/c11f8d40c119867e30e3421f696f931d-Abstract-Conference.html">NeurIPS 2023</a> (Spotlight). [<a href="https://arxiv.org/abs/2306.01993">arxiv</a>]</p></li>
 <li><p><strong>The probability flow ODE is provably fast</strong></p>
 <p>[A] Sitan Chen, Sinho Chewi, <strong>Holden Lee</strong>, Yuanzhi Li, Jianfeng Lu, Adil Salim</p>
-<p>NeurIPS 2023. [<a href="https://arxiv.org/abs/2306.01993">arxiv</a>)</p></li>
+<p>NeurIPS 2023. [<a href="https://arxiv.org/abs/2306.01993">arxiv</a>]</p></li>
 <li><p><strong>Improved Analysis of Score-based Generative Modeling: User-Friendly Bounds under Minimal Smoothness Assumptions</strong></p>
 <p>[A] Hongrui Chen, <strong>Holden Lee</strong>, and Jianfeng Lu.</p>
 <p>ICML 2023. [<a href="https://arxiv.org/abs/2211.01916">arxiv</a>]</p></li>
@@ -164,7 +164,7 @@ Holden Lee, Chirag Pabbaraju, Anish Sevekari, Andrej Risteski
 <p>ICLR 2023, NeurIPS 2022 Workshop on Self-Supervised Learning. [<a href="https://arxiv.org/abs/2210.00189">arxiv</a>]</p></li>
 <li><p><strong>Convergence of score-based generative modeling for general data distributions</strong></p>
 <p>[A] <strong>Holden Lee</strong>, Jianfeng Lu, and Yixin Tan.</p>
-<p>NeurIPS 2022 Workshop on Score-Based Methods. [<a href="https://arxiv.org/abs/2209.12381">arxiv</a>]</p></li>
+<p>ALT 2023, NeurIPS 2022 Workshop on Score-Based Methods. [<a href="https://arxiv.org/abs/2209.12381">arxiv</a>]</p></li>
 <li><p><strong>Convergence for score-based generative modeling with polynomial complexity</strong></p>
 <p>[A] <strong>Holden Lee</strong>, Jianfeng Lu, and Yixin Tan.</p>
 <p><a href="https://neurips.cc/virtual/2022/poster/53863">NeurIPS 2022</a> (oral). [<a href="https://arxiv.org/abs/2206.06227">arxiv</a>, <a href="https://www.dropbox.com/s/una0wbbr4jknz0l/score-talk.pdf?dl=0">slides</a>]</p></li>
@@ -175,20 +175,20 @@ Holden Lee, Chirag Pabbaraju, Anish Sevekari, Andrej Risteski
 <h3 id="algorithms-for-sampling-and-counting">Algorithms for sampling and counting</h3>
 <ul>
 <li><p><strong>Sampling List Packings</strong></p>
-<p>[A] Evan Camrud, Ewan Davies, Alex Karduna, Holden Lee.</p>
-<p><a href="https://arxiv.org/abs/2402.03520">arxiv</a></p></li>
+<p>[A] Evan Camrud, Ewan Davies, Alex Karduna, <strong>Holden Lee</strong>.</p>
+<p>Preprint, 2023. <a href="https://arxiv.org/abs/2402.03520">arxiv</a></p></li>
 <li><p><strong>Parallelising Glauber Dynamics</strong></p>
-<p>Holden Lee.</p>
-<p><a href="https://arxiv.org/abs/2307.07131">arxiv</a></p></li>
+<p><strong>Holden Lee</strong>.</p>
+<p>Preprint, 2023. <a href="https://arxiv.org/abs/2307.07131">arxiv</a></p></li>
 <li><p><strong>Fisher information lower bounds for sampling</strong></p>
 <p>[A] Sinho Chewi, Patrik Gerber, <strong>Holden Lee</strong>, Chen Lu.</p>
-<p>In submission. [<a href="https://arxiv.org/abs/2210.02482">arxiv</a>]</p></li>
+<p>ALT 2023. [<a href="https://arxiv.org/abs/2210.02482">arxiv</a>]</p></li>
 <li><p><strong>Sampling Approximately Low-Rank Ising Models: MCMC meets Variational Methods</strong></p>
 <p>[A] Frederic Koehler, <strong>Holden Lee</strong>, and Andrej Risteski.</p>
 <p>COLT 2022. [<a href="https://arxiv.org/abs/2202.08907">arXiv</a>, <a href="https://arxiv.org/pdf/2202.08907">pdf</a>, <a href="https://www.dropbox.com/s/grd6fo5aa640kra/lri-talk.pdf?dl=0">slides</a>, <a href="https://slideslive.com/38985703/sampling-approximately-lowrank-ising-models-mcmc-meets-variational-methods?ref=folder-104261">video</a>]</p></li>
 <li><p><strong>Approximation algorithms for the random-field Ising model</strong></p>
 <p>[A] Tyler Helmuth, <strong>Holden Lee</strong>, Will Perkins, Mohan Ravichandran, and Qiang Wu.</p>
-<p>SIAM Journal on Discrete Mathematics 37 (3), 1610-1629. [<a href="https://arxiv.org/abs/2108.11889">arXiv</a>, <a href="https://arxiv.org/pdf/2108.11889">pdf</a>]</p></li>
+<p>SIAM Journal on Discrete Mathematics 37 (3), 1610-1629. 2024. [<a href="https://arxiv.org/abs/2108.11889">arXiv</a>, <a href="https://arxiv.org/pdf/2108.11889">pdf</a>]</p></li>
 <li><p><strong>Efficient sampling from the Bingham distribution</strong></p>
 <p>[A] Rong Ge, <strong>Holden Lee</strong>, Jianfeng Lu, and Andrej Risteski.</p>
 <p>ALT 2021. [<a href="https://arxiv.org/abs/2010.00137">arXiv</a>, <a href="https://arxiv.org/pdf/2010.00137">pdf</a>, <a href="https://www.youtube.com/watch?v=6dkS-Hdg8cs">video</a>]</p></li>
@@ -230,10 +230,10 @@ Holden Lee, Chirag Pabbaraju, Anish Sevekari, Andrej Risteski
 <h3 id="natural-language-processing">Natural language processing</h3>
 <ul>
 <li><p><strong>Principled Gradient-based Markov Chain Monte Carlo for Text Generation</strong></p>
-<p>Li Du, Afra Amini, Lucas Torroba Hennigen, Xinyan Velocity Yu, Jason Eisner, Holden Lee, Ryan Cotterell.</p>
-<p><a href="https://arxiv.org/abs/2312.17710">arxiv</a></p></li>
+<p>Li Du, Afra Amini, Lucas Torroba Hennigen, Xinyan Velocity Yu, Jason Eisner, <strong>Holden Lee</strong>, Ryan Cotterell.</p>
+<p>Preprint, 2023. <a href="https://arxiv.org/abs/2312.17710">arxiv</a></p></li>
 <li><p><strong>Connecting Pre-trained Language Model and Downstream Task via Properties of Representation</strong></p>
-<p>Chenwei Wu, Holden Lee, Rong Ge.</p>
+<p>Chenwei Wu, <strong>Holden Lee</strong>, Rong Ge.</p>
 <p><a href="https://proceedings.neurips.cc/paper_files/paper/2023/hash/93712c59f6a81bd92040facf04c8b308-Abstract-Conference.html">NeurIPS 2023</a>.</p></li>
 </ul>
 <h3 id="neural-networks">Neural networks</h3>
@@ -248,8 +248,8 @@ Holden Lee, Chirag Pabbaraju, Anish Sevekari, Andrej Risteski
 <h3 id="machine-learning-other">Machine Learning (other)</h3>
 <ul>
 <li><p><strong>How Flawed is ECE? An Analysis via Logit Smoothing</strong></p>
-<p>[A] Muthu Chidambaram, Holden Lee, Colin McSwiggen, Semon Rezchikov.</p>
-<p><a href="https://arxiv.org/abs/2402.10046">arxiv</a></p></li>
+<p>[A] Muthu Chidambaram, <strong>Holden Lee</strong>, Colin McSwiggen, Semon Rezchikov.</p>
+<p>Preprint, 2024. <a href="https://arxiv.org/abs/2402.10046">arxiv</a></p></li>
 </ul>
 <h3 id="complexity-theory">Complexity theory</h3>
 <ul>
