--- a/Research.html
+++ b/Research.html
@@ -190,7 +190,7 @@ Holden Lee, Chirag Pabbaraju, Anish Sevekari, Andrej Risteski
 </ul>
 <h3 id="algorithms-for-sampling-and-counting">Algorithms for sampling and counting</h3>
 <ul>
-<li><p>Fast Mixing of Data Augmentation Algorithms: Bayesian Probit, Logit, and Lasso Regression.</p>
+<li><p><strong>Fast Mixing of Data Augmentation Algorithms: Bayesian Probit, Logit, and Lasso Regression.</strong></p>
 <p>[A] <strong>Holden Lee</strong>, <strong>Kexin Zhang</strong>.</p>
 <p>Preprint, 2024. <a href="https://arxiv.org/abs/2412.07999">arxiv</a></p></li>
 <li><p><strong>Efficiently learning and sampling multimodal distributions with data-based initialization</strong></p>
